--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-# formulaire
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <title>Formulaire</title>
+</head>
+<body>
+    <h1>Formulaire</h1>
+    
+</body>
+</html>
