--- a/index.html
+++ b/index.html
@@ -12,32 +12,41 @@
     <link rel="stylesheet" href="style.css" />
     <title>Formulaire</title>
   </head>
+
   <body>
     <h1 class="text-center mb-4">Formulaire</h1>
     <div class="container">
       <form class="row g-3 border border-black rounded">
+        <!-- Section Adresse -->
         <div class="col-12">
-          <label for="inputAddress" class="form-label main-label">Adresse</label>
-          <input type="text" class="form-control" id="inputAddress" />
+          <label for="inputAddress" class="form-label main-label"
+            >Adresse</label
+          >
+          <input type="text" class="form-control" id="inputAddress" required />
         </div>
         <div class="col-12">
-          <label for="inputAddress2" class="form-label main-label">Adresse suite</label>
+          <label for="inputAddress2" class="form-label main-label"
+            >Adresse suite</label
+          >
           <input type="text" class="form-control" id="inputAddress2" />
         </div>
         <div class="col-md-8">
           <label for="inputCity" class="form-label main-label">Ville</label>
-          <input type="text" class="form-control" id="inputCity" />
+          <input type="text" class="form-control" id="inputCity" required />
         </div>
         <div class="col-md-4">
-          <label for="inputZip" class="form-label main-label">Code Postal</label>
-          <input type="text" class="form-control" id="inputZip" />
+          <label for="inputZip" class="form-label main-label"
+            >Code Postal</label
+          >
+          <input type="text" class="form-control" id="inputZip" required />
         </div>
 
+        <!-- Section Propriété -->
         <div class="col-12">
           <label for="inputType" class="form-label main-label"
             >Votre bien est un(e)?</label
           >
-          <select id="inputState" class="form-select" required>
+          <select class="form-select" id="inputType" required>
             <option>Studio</option>
             <option>T1 (une cuisine indépendante)</option>
             <option>T2 (une chambre indépendante)</option>
@@ -49,6 +58,7 @@
           </select>
         </div>
 
+        <!-- Section Capacité -->
         <div class="col-12">
           <label class="form-label main-label" for="inputNumber"
             >Quelle est sa capacité d'accueil ?</label
@@ -169,6 +179,7 @@
           </div>
         </div>
 
+        <!-- Section Durée -->
         <div class="col-12">
           <label class="form-label main-label" for="inputDuration"
             >Pour combien de temps souhaiteriez-vous nous confier votre bien
@@ -225,6 +236,7 @@
           </div>
         </div>
 
+        <!-- Section Equipements -->
         <div class="col-12">
           <label class="form-label main-label" for="inputEquipment"
             >Avez-vous l'un de ces équipements ?</label
@@ -297,6 +309,7 @@
           </div>
         </div>
 
+        <!-- Section Photo -->
         <div class="col-12">
           <label class="form-label main-label" for="inputPicture"
             >Avez-vous des photos de votre logement ?</label
@@ -304,6 +317,7 @@
           <input class="form-control" type="file" id="inputPicture" />
         </div>
 
+        <!-- Section Nombre de biens immobiliers -->
         <div class="col-12">
           <label class="form-label main-label" for="inputNumber"
             >Pouvez-vous me donner le nombre de biens immobiliers que vous
@@ -425,20 +439,19 @@
           </div>
         </div>
 
+        <!-- Section Information Personnel-->
         <div class="col-12">
           <label for="inputFullName" class="form-label main-label"
             >Comment vous appelez-vous ? (Prénom + Nom)</label
           >
           <input type="text" class="form-control" id="inputFullName" />
         </div>
-
         <div class="col-12">
           <label for="inputPhone" class="form-label main-label"
             >Votre numéro de téléphone ?</label
           >
           <input type="text" class="form-control" id="inputPhone" />
         </div>
-
         <div class="col-12">
           <label for="inputEmail" class="form-label main-label"
             >Votre e-mail ? (Pour vous envoyer vos résultats)</label
@@ -446,6 +459,7 @@
           <input type="email" class="form-control" id="inputEmail" />
         </div>
 
+        <!-- Section Comment avez vous connu Comme My Home -->
         <div class="col-12">
           <label class="form-label main-label" for="inputKnown"
             >Comment avez-vous connu Comme My Home ?</label
@@ -523,8 +537,11 @@
           </div>
         </div>
 
+        <!-- Section Type de résidence -->
         <div class="col-12">
-          <label class="form-label main-label" for="inputNature">Type de résidence</label>
+          <label class="form-label main-label" for="inputNature"
+            >Type de résidence</label
+          >
           <div class="form-check">
             <input
               class="form-check-input"
@@ -569,11 +586,13 @@
           </div>
         </div>
 
+        <!-- Bouton Validation -->
         <button type="submit" class="btn col-md-4 mx-auto btn-custom">
           Submit
         </button>
       </form>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
