--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity1"
+                value="1"
               />
             </div>
             <div class="col-1">
@@ -110,6 +111,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity2"
+                value="2"
               />
             </div>
             <div class="col-1">
@@ -118,6 +120,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity3"
+                value="3"
               />
             </div>
             <div class="col-1">
@@ -126,6 +129,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity4"
+                value="4"
               />
             </div>
             <div class="col-1">
@@ -134,6 +138,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity5"
+                value="5"
               />
             </div>
             <div class="col-1">
@@ -142,6 +147,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity6"
+                value="6"
               />
             </div>
             <div class="col-1">
@@ -150,6 +156,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity7"
+                value="7"
               />
             </div>
             <div class="col-1">
@@ -158,6 +165,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity8"
+                value="8"
               />
             </div>
             <div class="col-1">
@@ -166,6 +174,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity9"
+                value="9"
               />
             </div>
             <div class="col-1">
@@ -174,6 +183,7 @@
                 type="radio"
                 name="inputCapacity"
                 id="inputCapacity10"
+                value="10"
               />
             </div>
           </div>
@@ -190,6 +200,7 @@
               type="radio"
               name="inputDuration"
               id="inputDuration1"
+              value="Entre 2 semaines et 6 mois"
             />
             <label class="form-check-label" for="inputDuration1"
               >Entre 2 semaines et 6 mois</label
@@ -201,6 +212,7 @@
               type="radio"
               name="inputDuration"
               id="inputDuration2"
+              value="Entre 6 mois et 12 mois"
             />
             <label class="form-check-label" for="inputDuration2"
               >Entre 6 mois et 12 mois</label
@@ -212,6 +224,7 @@
               type="radio"
               name="inputDuration"
               id="inputDuration3"
+              value="1 an"
             />
             <label class="form-check-label" for="inputDuration3">1 an</label>
           </div>
@@ -221,6 +234,7 @@
               type="radio"
               name="inputDuration"
               id="inputDuration4"
+              value="2 ans"
             />
             <label class="form-check-label" for="inputDuration4">2 ans</label>
           </div>
@@ -230,6 +244,7 @@
               type="radio"
               name="inputDuration"
               id="inputDuration5"
+              value="3 ans"
             />
             <label class="form-check-label" for="inputDuration5">3 ans</label>
           </div>
@@ -632,7 +647,7 @@
                 }
                 resultString +=
                   "<p><strong>" +
-                  elements[i].labels[0].textContent +
+                  elements[i].name +
                   ":</strong> " +
                   selectedOptions.join(", ") +
                   "</p>";
